Closed
Bug 1332508
Opened 8 years ago
Closed 8 years ago
Apply https://github.com/jemalloc/jemalloc/commit/d9f7b2a4307f7ff9f7a139b33d366d44e8a8b83d to mozjemalloc/replace-malloc
Categories
(Core :: Memory Allocator, defect)
Core
Memory Allocator
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
n.nethercote
:
review+
jcristau
:
approval-mozilla-beta-
|
Details |
No description provided.
| Assignee | ||
Comment 1•8 years ago
|
||
More specifically, the part about zone_force_unlock. The refactor is not necessary.
| Assignee | ||
Comment 2•8 years ago
|
||
Other relevant commit: https://github.com/jemalloc/jemalloc/commit/4e2e3dd9cf19ed5991938a708a8b50611aa5bbf8
| Comment hidden (mozreview-request) |
Comment 4•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8828606 [details]
Bug 1332508 - Reinitialize allocator mutexes in fork() child processes.
https://reviewboard.mozilla.org/r/105932/#review106896
Attachment #8828606 -
Flags: review?(n.nethercote) → review+
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/516551993d16
Reinitialize allocator mutexes in fork() child processes. r=njn
Comment 6•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 7•8 years ago
|
||
Not sure if we would apply it to TB esr45, but we should consider for 52 if mozilla does not take it.
tracking-thunderbird_esr45:
--- → +
| Assignee | ||
Comment 8•8 years ago
|
||
Comment on attachment 8828606 [details]
Bug 1332508 - Reinitialize allocator mutexes in fork() child processes.
Approval Request Comment
[Feature/Bug causing the regression]: Low-level system library changes in OSX 10.12
[User impact if declined]: Theoretical chances of deadlocks when forking subprocesses (for e.g. e10s or plugins) on OSX 10.12. Not formally observed, though.
[Is this code covered by automated tests?]: Yes and no. That is, the code being changed is pretty much exercised by anything that will cause subprocesses to start, and if it caused problems, we'd have seen them already.
[Has the fix been verified in Nightly?]: That it doesn't break anything, yes. That it actually fixes the theoretical deadlocks has not been observed (the deadlocks haven't been observed in the wild in the first place ; at least I'm not aware of such reports).
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: this fix depends on the changes from bug 1286613. It /is/ possible to come up with a different patch to fix the same issue on beta if bug 1286613 is not approved.
[Is the change risky?]: No
[Why is the change risky/not risky?]: See "Is this code covered by automated tests?"
[String changes made/needed]: None
Attachment #8828606 -
Flags: approval-mozilla-beta?
Updated•8 years ago
|
status-firefox51:
--- → wontfix
status-firefox52:
--- → affected
status-firefox-esr52:
--- → affected
Comment 9•8 years ago
|
||
Comment on attachment 8828606 [details]
Bug 1332508 - Reinitialize allocator mutexes in fork() child processes.
Declining for beta as the dependency on bug 1286613 makes this quite intrusive.
Attachment #8828606 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
Comment 10•8 years ago
|
||
Uplifted to THUNDERBIRD520b2_2017020901_RELBRANCH branch:
https://hg.mozilla.org/releases/mozilla-beta/rev/5f22c17aeac2
Updated•8 years ago
|
status-thunderbird_esr52:
--- → affected
tracking-thunderbird_esr52:
--- → +
You need to log in
before you can comment on or make changes to this bug.
Description
•